<resources>
    <string name="app_name">Android Dasar Satu</string>
    <string name="length">Panjang</string>
    <string name="width">Lebar</string>
    <string name="height">Tinggi</string>
    <string name="result">Hasil</string>
    <string name="calculate">Calculate</string>
    <string name="kembali">kembali</string>
    <string name="click_me">Click Me</string>
    <string name="open_camera">Open Camera</string>
    <string name="pindah_activity">Pindah Activity</string>
    <string name="pilih_angka_yang_kamu_suka">Pilih Angka yang kamu suka</string>
    <string name="pilih">PILIH</string>
    <string name="_200">200</string>
    <string name="_150">150</string>
    <string name="_100">100</string>
    <string name="_50">50</string>
</resources>