<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MoveForResultActivity">

    <TextView
        android:id="@+id/txt_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pilih_angka_yang_kamu_suka"
        android:textAlignment="center"
        android:textColor="#DC2121"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/radio_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_50" />

        <RadioButton
            android:id="@+id/rb_100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_100" />

        <RadioButton
            android:id="@+id/rb_150"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_150" />

        <RadioButton
            android:id="@+id/rb_200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_200" />

        <Button
            android:id="@+id/btn_choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pilih" />
    </RadioGroup>

</LinearLayout>